updates styles on the  y axis

--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -6,6 +6,7 @@
 
 @media (max-width: 770px){
     .container{
-        width: 100%;    
+        max-height: max-content;
+        width: 120%;    
     }
 }
